ajay commit in tada entry and accounts

--- a/hrmsproject/approval/templates/approval/tadaHr_approval/list.html
+++ b/hrmsproject/approval/templates/approval/tadaHr_approval/list.html
@@ -156,8 +156,8 @@
                                         <i data-feather="edit"></i>
                                     </a> -->
                                     <form action="#" method="POST" class="d-inline">
-                                        
-                    
+                                        @csrf
+                                        @method('DELETE')
                                         <button type="submit" class="text-danger">
                                             <i data-feather="trash-2"></i>
                                         </button>
